--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+body {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
 body #home_view {
   height: 100vh;
   width: 100%;
@@ -8,6 +14,13 @@ body #home_view {
 body #home_view #presentation_title {
   position: absolute;
   z-index: 3;
+}
+
+body #home_view #presentation_title h1, body #home_view #presentation_title h3 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  line-height: 1em;
+  color: #309d43;
 }
 
 body #home_view #clippath_polygon {
@@ -28,5 +41,31 @@ body #home_view #clippath_circle {
   z-index: 2;
   width: 100%;
   height: 100%;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation-name: zoom-out;
+          animation-name: zoom-out;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+}
+
+@-webkit-keyframes zoom-out {
+  0% {
+    width: 140%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes zoom-out {
+  0% {
+    width: 140%;
+  }
+  100% {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
