--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -19,7 +19,10 @@ $surface-color: #FBFBFF
 $warning-color: #dd0426
 $warning-light-color: #F02D3A
 
-body 
+body
+    padding: 0
+    margin: 0
+    overflow: hidden
     #home_view
         height: 100vh
         width: 100%
@@ -28,6 +31,11 @@ body
         #presentation_title
             position: absolute
             z-index: 3
+            h1, h3
+                font-family: 'Poppins', sans-serif
+                font-weight: 500
+                line-height: 1em
+                color: $primary-color
         #clippath_polygon
             clip-path: polygon(100% 50%, 0 100%, 100% 100%)
             background-color: $primary-color
@@ -41,7 +49,18 @@ body
             position: absolute
             z-index: 2
             width: 100%
-            height: 100% 
+            height: 100%
+            left: 50%
+            top: 50%
+            transform: translate(-50%, -50%)
+            animation-name: zoom-out
+            animation-duration: 4s
+            @keyframes zoom-out
+                0%
+                    width: 140% 
+                100% 
+                    width: 100%
+                
 
             
 
