modifying styles of the banner text and giving it animation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,13 +14,62 @@ body #home_view {
 body #home_view #presentation_title {
   position: absolute;
   z-index: 3;
+  padding: 25px;
 }
 
-body #home_view #presentation_title h1, body #home_view #presentation_title h3 {
+body #home_view #presentation_title h1 {
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1em;
   color: #309d43;
+}
+
+body #home_view #presentation_title h3 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  color: #9AE19D;
+}
+
+body #home_view #presentation_title #epigraph {
+  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #fff, transparent, transparent);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 10vw;
+  font-family: "Source Sans Pro", sans-serif;
+  -webkit-animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+          animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+}
+
+@-webkit-keyframes reveal {
+  80% {
+    letter-spacing: 8px;
+  }
+  100% {
+    background-size: 300% 300%;
+  }
+}
+
+@keyframes reveal {
+  80% {
+    letter-spacing: 8px;
+  }
+  100% {
+    background-size: 300% 300%;
+  }
+}
+
+@-webkit-keyframes glow {
+  40% {
+    text-shadow: 0 0 8px #fff;
+  }
+}
+
+@keyframes glow {
+  40% {
+    text-shadow: 0 0 8px #fff;
+  }
 }
 
 body #home_view #clippath_polygon {
