--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -31,11 +31,33 @@ body
         #presentation_title
             position: absolute
             z-index: 3
-            h1, h3
+            padding: 25px
+            h1
                 font-family: 'Poppins', sans-serif
-                font-weight: 500
+                font-weight: 600
                 line-height: 1em
                 color: $primary-color
+            h3
+                font-family: 'Poppins', sans-serif
+                font-weight: 200
+                font-size: 20px
+                color: $primary-variant-color
+            #epigraph
+                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #fff, transparent, transparent)
+                -webkit-background-clip: text
+                background-clip: text
+                color: transparent
+                font-size: 10vw
+                font-family: "Source Sans Pro", sans-serif
+                animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms
+                @keyframes reveal
+                    80%
+                        letter-spacing: 8px
+                    100%
+                        background-size: 300% 300%
+                @keyframes glow
+                    40%
+                        text-shadow: 0 0 8px #fff   
         #clippath_polygon
             clip-path: polygon(100% 50%, 0 100%, 100% 100%)
             background-color: $primary-color
