--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -31,33 +31,35 @@ body
         #presentation_title
             position: absolute
             z-index: 3
-            padding: 25px
-            h1
-                font-family: 'Poppins', sans-serif
-                font-weight: 600
-                line-height: 1em
-                color: $primary-color
-            h3
-                font-family: 'Poppins', sans-serif
-                font-weight: 200
-                font-size: 20px
-                color: $primary-variant-color
+            padding: 45px
+            margin-top: 25px
+            text-align: center
             #epigraph
-                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #fff, transparent, transparent)
+                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent)
                 -webkit-background-clip: text
                 background-clip: text
                 color: transparent
-                font-size: 10vw
-                font-family: "Source Sans Pro", sans-serif
+                //font-size: 10vw
+                //font-family: "Source Sans Pro", sans-serif
+                //font-family: 'Poppins', sans-serif
+                //font-weight: 500
                 animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms
                 @keyframes reveal
                     80%
-                        letter-spacing: 8px
+                        letter-spacing: 3px
                     100%
                         background-size: 300% 300%
                 @keyframes glow
                     40%
-                        text-shadow: 0 0 8px #fff   
+                        text-shadow: 0 0 8px $surface-color
+                h1
+                    font-family: 'Poppins', sans-serif
+                    font-weight: 600
+                    line-height: 1em
+                h3
+                    font-family: 'Poppins', sans-serif
+                    font-weight: 200
+                    font-size: 20px  
         #clippath_polygon
             clip-path: polygon(100% 50%, 0 100%, 100% 100%)
             background-color: $primary-color
