--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,118 +1,234 @@
-body {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-}
-
-body #home_view {
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  background-color: #2C302E;
-}
-
-body #home_view #presentation_title {
-  position: absolute;
-  z-index: 3;
-  padding: 45px;
-  margin-top: 25px;
-  text-align: center;
-}
-
-body #home_view #presentation_title #epigraph {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #FBFBFF, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  -webkit-animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-          animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-
-@-webkit-keyframes reveal {
-  80% {
-    letter-spacing: 3px;
+@media (max-width: 449px) {
+  body {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
   }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-
-@keyframes reveal {
-  80% {
-    letter-spacing: 3px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-
-@-webkit-keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #FBFBFF;
-  }
-}
-
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #FBFBFF;
-  }
-}
-
-body #home_view #presentation_title #epigraph h1 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
-  line-height: 1em;
-}
-
-body #home_view #presentation_title #epigraph h3 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-}
-
-body #home_view #clippath_polygon {
-  -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
-          clip-path: polygon(100% 50%, 0 100%, 100% 100%);
-  background-color: #309d43;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-body #home_view #clippath_circle {
-  -webkit-clip-path: circle(20.7% at 71% 50%);
-          clip-path: circle(20.7% at 71% 50%);
-  background-color: #9AE19D;
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-animation-name: zoom-out;
-          animation-name: zoom-out;
-  -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-}
-
-@-webkit-keyframes zoom-out {
-  0% {
-    width: 140%;
-  }
-  100% {
+  body #home_view {
+    height: 100vh;
     width: 100%;
+    position: relative;
+    background-color: #2C302E;
+  }
+  body #home_view #presentation_title {
+    position: absolute;
+    z-index: 3;
+    padding: 45px;
+    margin-top: 25px;
+    width: 100%;
+    text-align: center;
+  }
+  body #home_view #presentation_title #epigraph {
+    background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #FBFBFF, transparent, transparent);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    -webkit-animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+            animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+  }
+  @-webkit-keyframes reveal {
+    80% {
+      letter-spacing: 3px;
+    }
+    100% {
+      background-size: 300% 300%;
+    }
+  }
+  @keyframes reveal {
+    80% {
+      letter-spacing: 3px;
+    }
+    100% {
+      background-size: 300% 300%;
+    }
+  }
+  @-webkit-keyframes glow {
+    40% {
+      text-shadow: 0 0 8px #FBFBFF;
+    }
+  }
+  @keyframes glow {
+    40% {
+      text-shadow: 0 0 8px #FBFBFF;
+    }
+  }
+  body #home_view #presentation_title #epigraph h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 1em;
+    font-size: 35px;
+  }
+  body #home_view #presentation_title #epigraph h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+  }
+  body #home_view #clippath_polygon {
+    -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+            clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+    background-color: #309d43;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+  body #home_view #clippath_circle {
+    -webkit-clip-path: circle(19.8% at 50% 50%);
+            clip-path: circle(19.8% at 50% 50%);
+    background-color: #9AE19D;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    -webkit-animation-name: zoom-out;
+            animation-name: zoom-out;
+    -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+  }
+  @-webkit-keyframes zoom-out {
+    0% {
+      width: 180%;
+      -webkit-clip-path: circle(9.3% at 50% 50%);
+              clip-path: circle(9.3% at 50% 50%);
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  @keyframes zoom-out {
+    0% {
+      width: 180%;
+      -webkit-clip-path: circle(9.3% at 50% 50%);
+              clip-path: circle(9.3% at 50% 50%);
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  body #home_view #home_button {
+    position: absolute;
+    z-index: 4;
+    margin-top: 70vh;
+  }
+  body #about {
+    height: 100vh;
   }
 }
 
-@keyframes zoom-out {
-  0% {
-    width: 140%;
+@media (min-width: 450px) {
+  body {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
   }
-  100% {
+  body #home_view {
+    height: 100vh;
     width: 100%;
+    position: relative;
+    background-color: #2C302E;
+  }
+  body #home_view #presentation_title {
+    position: absolute;
+    z-index: 3;
+    padding: 45px;
+    margin-top: 25px;
+    width: 100%;
+    text-align: center;
+  }
+  body #home_view #presentation_title #epigraph {
+    background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #FBFBFF, transparent, transparent);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    -webkit-animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+            animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+  }
+  @-webkit-keyframes reveal {
+    80% {
+      letter-spacing: 3px;
+    }
+    100% {
+      background-size: 300% 300%;
+    }
+  }
+  @keyframes reveal {
+    80% {
+      letter-spacing: 3px;
+    }
+    100% {
+      background-size: 300% 300%;
+    }
+  }
+  @-webkit-keyframes glow {
+    40% {
+      text-shadow: 0 0 8px #FBFBFF;
+    }
+  }
+  @keyframes glow {
+    40% {
+      text-shadow: 0 0 8px #FBFBFF;
+    }
+  }
+  body #home_view #presentation_title #epigraph h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 1em;
+    font-size: 85px;
+  }
+  body #home_view #presentation_title #epigraph h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+  }
+  body #home_view #clippath_polygon {
+    -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+            clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+    background-color: #309d43;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+  body #home_view #clippath_circle {
+    -webkit-clip-path: circle(20.7% at 71% 50%);
+            clip-path: circle(20.7% at 71% 50%);
+    background-color: #9AE19D;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-animation-name: zoom-out;
+            animation-name: zoom-out;
+    -webkit-animation-duration: 4s;
+            animation-duration: 4s;
+  }
+  @-webkit-keyframes zoom-out {
+    0% {
+      width: 140%;
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  @keyframes zoom-out {
+    0% {
+      width: 140%;
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  body #home_view #home_button {
+    position: absolute;
+    z-index: 4;
+    margin-top: 70vh;
+  }
+  body #about {
+    height: 100vh;
   }
 }
 /*# sourceMappingURL=styles.css.map */
