--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -19,71 +19,154 @@ $surface-color: #FBFBFF
 $warning-color: #dd0426
 $warning-light-color: #F02D3A
 
-body
-    padding: 0
-    margin: 0
-    overflow: hidden
-    #home_view
-        height: 100vh
-        width: 100%
-        position: relative
-        background-color: $secondary-color
-        #presentation_title
-            position: absolute
-            z-index: 3
-            padding: 45px
-            margin-top: 25px
-            text-align: center
-            #epigraph
-                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent)
-                -webkit-background-clip: text
-                background-clip: text
-                color: transparent
-                //font-size: 10vw
-                //font-family: "Source Sans Pro", sans-serif
-                //font-family: 'Poppins', sans-serif
-                //font-weight: 500
-                animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms
-                @keyframes reveal
-                    80%
-                        letter-spacing: 3px
-                    100%
-                        background-size: 300% 300%
-                @keyframes glow
-                    40%
-                        text-shadow: 0 0 8px $surface-color
-                h1
-                    font-family: 'Poppins', sans-serif
-                    font-weight: 600
-                    line-height: 1em
-                h3
-                    font-family: 'Poppins', sans-serif
-                    font-weight: 200
-                    font-size: 20px  
-        #clippath_polygon
-            clip-path: polygon(100% 50%, 0 100%, 100% 100%)
-            background-color: $primary-color
-            position: absolute
-            z-index: 1
+@media (max-width: 449px)    
+    body
+        padding: 0
+        margin: 0
+        overflow-x: hidden
+        #home_view
+            height: 100vh
             width: 100%
-            height: 100% 
-        #clippath_circle
-            clip-path: circle(20.7% at 71% 50%)
-            background-color: $primary-variant-color
-            position: absolute
-            z-index: 2
+            position: relative
+            background-color: $secondary-color
+            #presentation_title
+                position: absolute
+                z-index: 3
+                padding: 45px
+                margin-top: 25px
+                width: 100%
+                text-align: center
+                #epigraph
+                    background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent)
+                    -webkit-background-clip: text
+                    background-clip: text
+                    color: transparent
+                    //font-size: 10vw
+                    //font-family: "Source Sans Pro", sans-serif
+                    //font-family: 'Poppins', sans-serif
+                    //font-weight: 500
+                    animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms
+                    @keyframes reveal
+                        80%
+                            letter-spacing: 3px
+                        100%
+                            background-size: 300% 300%
+                    @keyframes glow
+                        40%
+                            text-shadow: 0 0 8px $surface-color
+                    h1
+                        font-family: 'Poppins', sans-serif
+                        font-weight: 600
+                        line-height: 1em
+                        font-size: 35px
+                    h3
+                        font-family: 'Poppins', sans-serif
+                        font-weight: 200
+                        font-size: 18px  
+            #clippath_polygon
+                clip-path: polygon(100% 50%, 0 100%, 100% 100%)
+                background-color: $primary-color
+                position: absolute
+                z-index: 1
+                width: 100%
+                height: 100% 
+            #clippath_circle
+                clip-path: circle(19.8% at 50% 50%)
+                background-color: $primary-variant-color
+                position: absolute
+                z-index: 2
+                width: 100%
+                height: 100%
+                
+                animation-name: zoom-out
+                animation-duration: 3s
+                @keyframes zoom-out
+                    0%
+                        width: 180%
+                        clip-path: circle(9.3% at 50% 50%) 
+                    100% 
+                        width: 100%
+            #home_button
+                position: absolute
+                z-index: 4
+                margin-top: 70vh
+        #about
+            height: 100vh
+
+@media (min-width: 450px)
+    body
+        padding: 0
+        margin: 0
+        overflow-x: hidden
+        #home_view
+            height: 100vh
             width: 100%
-            height: 100%
-            left: 50%
-            top: 50%
-            transform: translate(-50%, -50%)
-            animation-name: zoom-out
-            animation-duration: 4s
-            @keyframes zoom-out
-                0%
-                    width: 140% 
-                100% 
-                    width: 100%
+            position: relative
+            background-color: $secondary-color
+            #presentation_title
+                position: absolute
+                z-index: 3
+                padding: 45px
+                margin-top: 25px
+                width: 100%
+                text-align: center
+                #epigraph
+                    background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent)
+                    -webkit-background-clip: text
+                    background-clip: text
+                    color: transparent
+                    //font-size: 10vw
+                    //font-family: "Source Sans Pro", sans-serif
+                    //font-family: 'Poppins', sans-serif
+                    //font-weight: 500
+                    animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms
+                    @keyframes reveal
+                        80%
+                            letter-spacing: 3px
+                        100%
+                            background-size: 300% 300%
+                    @keyframes glow
+                        40%
+                            text-shadow: 0 0 8px $surface-color
+                    h1
+                        font-family: 'Poppins', sans-serif
+                        font-weight: 600
+                        line-height: 1em
+                        font-size: 85px
+                    h3
+                        font-family: 'Poppins', sans-serif
+                        font-weight: 200
+                        font-size: 18px  
+            #clippath_polygon
+                clip-path: polygon(100% 50%, 0 100%, 100% 100%)
+                background-color: $primary-color
+                position: absolute
+                z-index: 1
+                width: 100%
+                height: 100% 
+            #clippath_circle
+                clip-path: circle(20.7% at 71% 50%)
+                background-color: $primary-variant-color
+                position: absolute
+                z-index: 2
+                width: 100%
+                height: 100%
+                left: 50%
+                top: 50%
+                transform: translate(-50%, -50%)
+                animation-name: zoom-out
+                animation-duration: 4s
+                @keyframes zoom-out
+                    0%
+                        width: 140% 
+                    100% 
+                        width: 100%
+            #home_button
+                position: absolute
+                z-index: 4
+                margin-top: 70vh
+        #about
+            height: 100vh
                 
 
             
