--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,7 @@
-@media (max-width: 449px) {
+@media (max-width: 699px) {
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     padding: 0;
     margin: 0;
@@ -110,12 +113,15 @@
     z-index: 4;
     margin-top: 70vh;
   }
-  body #about {
+  body #about_view {
     height: 100vh;
   }
 }
 
-@media (min-width: 450px) {
+@media (min-width: 700px) {
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     padding: 0;
     margin: 0;
@@ -130,9 +136,9 @@
   body #home_view #presentation_title {
     position: absolute;
     z-index: 3;
-    padding: 45px;
-    margin-top: 25px;
-    width: 100%;
+    padding: 25px;
+    margin-top: 35vh;
+    width: 50%;
     text-align: center;
   }
   body #home_view #presentation_title #epigraph {
@@ -173,7 +179,8 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     line-height: 1em;
-    font-size: 85px;
+    font-size: 65px;
+    margin-bottom: 25px;
   }
   body #home_view #presentation_title #epigraph h3 {
     font-family: 'Poppins', sans-serif;
@@ -186,6 +193,15 @@
     background-color: #309d43;
     position: absolute;
     z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+  body #home_view #clippath_triangle {
+    -webkit-clip-path: polygon(0 93%, 0 100%, 100% 100%);
+            clip-path: polygon(0 93%, 0 100%, 100% 100%);
+    background-color: #9AE19D;
+    position: absolute;
+    z-index: 2;
     width: 100%;
     height: 100%;
   }
@@ -222,13 +238,32 @@
       width: 100%;
     }
   }
-  body #home_view #home_button {
+  body #home_view .container-fluid {
+    margin-left: 0;
+    margin-right: 0;
+    width: 50%;
+  }
+  body #home_view .container-fluid .w-100 {
+    width: 50% !important;
+  }
+  body #home_view .container-fluid #home_button {
     position: absolute;
     z-index: 4;
-    margin-top: 70vh;
+    margin-top: 65vh;
   }
-  body #about {
+  body #about_view {
     height: 100vh;
+    background-color: #474A48;
+    position: relative;
+  }
+  body #about_view #clippath_about {
+    -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+    background-color: #2C302E;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
   }
 }
 /*# sourceMappingURL=styles.css.map */
