--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -19,7 +19,10 @@ $surface-color: #FBFBFF
 $warning-color: #dd0426
 $warning-light-color: #F02D3A
 
-@media (max-width: 449px)    
+
+@media (max-width: 699px)
+    html
+        scroll-behavior: smooth    
     body
         padding: 0
         margin: 0
@@ -90,10 +93,12 @@ $warning-light-color: #F02D3A
                 position: absolute
                 z-index: 4
                 margin-top: 70vh
-        #about
+        #about_view
             height: 100vh
 
-@media (min-width: 450px)
+@media (min-width: 700px)
+    html
+        scroll-behavior: smooth 
     body
         padding: 0
         margin: 0
@@ -106,9 +111,9 @@ $warning-light-color: #F02D3A
             #presentation_title
                 position: absolute
                 z-index: 3
-                padding: 45px
-                margin-top: 25px
-                width: 100%
+                padding: 25px
+                margin-top: 35vh
+                width: 50%
                 text-align: center
                 #epigraph
                     background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent)
@@ -132,7 +137,8 @@ $warning-light-color: #F02D3A
                         font-family: 'Poppins', sans-serif
                         font-weight: 600
                         line-height: 1em
-                        font-size: 85px
+                        font-size: 65px
+                        margin-bottom: 25px
                     h3
                         font-family: 'Poppins', sans-serif
                         font-weight: 200
@@ -142,6 +148,13 @@ $warning-light-color: #F02D3A
                 background-color: $primary-color
                 position: absolute
                 z-index: 1
+                width: 100%
+                height: 100%
+            #clippath_triangle
+                clip-path: polygon(0 93%, 0 100%, 100% 100%)
+                background-color: $primary-variant-color
+                position: absolute
+                z-index: 2
                 width: 100%
                 height: 100% 
             #clippath_circle
@@ -161,12 +174,28 @@ $warning-light-color: #F02D3A
                         width: 140% 
                     100% 
                         width: 100%
-            #home_button
-                position: absolute
-                z-index: 4
-                margin-top: 70vh
-        #about
+            .container-fluid
+                margin-left: 0
+                margin-right: 0
+                width: 50%
+                .w-100
+                    width: 50% !important            
+                #home_button
+                    position: absolute
+                    z-index: 4
+                    margin-top: 65vh
+                    
+        #about_view
             height: 100vh
+            background-color: $secondary-variant-color
+            position: relative
+            #clippath_about
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%)
+                background-color: $secondary-color
+                position: absolute
+                width: 100%
+                height: 100%
+                z-index: 1
                 
 
             
