--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,8 +197,8 @@
     height: 100%;
   }
   body #home_view #clippath_triangle {
-    -webkit-clip-path: polygon(0 93%, 0 100%, 100% 100%);
-            clip-path: polygon(0 93%, 0 100%, 100% 100%);
+    -webkit-clip-path: polygon(0 89%, 100% 95%, 100% 100%, 0% 100%);
+            clip-path: polygon(0 89%, 100% 95%, 100% 100%, 0% 100%);
     background-color: #9AE19D;
     position: absolute;
     z-index: 2;
@@ -257,13 +257,25 @@
     position: relative;
   }
   body #about_view #clippath_about {
-    -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 83%, 0 96%);
+            clip-path: polygon(0 0, 100% 0, 100% 83%, 0 96%);
     background-color: #2C302E;
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
+  }
+  body #about_view #clippath_about .container h1 {
+    color: #309d43;
+    font-family: 'Poppins', sans-serif;
+    padding: 1rem;
+    margin-top: 3rem;
+    font-weight: 700;
+    letter-spacing: 7px;
+    font-size: 45px;
+  }
+  body #about_view #clippath_about #about_content {
+    color: white;
   }
 }
 /*# sourceMappingURL=styles.css.map */
