--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -196,7 +196,7 @@ $warning-light-color: #F02D3A
                 width: 100%
                 height: 100%
                 z-index: 1
-                .container
+                #about_title
                     h1
                         color: $primary-color
                         font-family: 'Poppins', sans-serif
@@ -207,6 +207,8 @@ $warning-light-color: #F02D3A
                         font-size: 45px
                 #about_content
                     color: white
+                    h2
+                        color: $primary-variant-color
                 
 
             
