--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -209,6 +209,13 @@ $warning-light-color: #F02D3A
                     color: white
                     h2
                         color: $primary-variant-color
+        #background_fixed
+            height: 100vh
+            position: relative
+            background-image: url("../img/electronic_circuit.jpg")
+        #projects_section
+            height: 100vh
+            position: relative
                 
 
             
