--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -211,8 +211,20 @@ $warning-light-color: #F02D3A
                         color: $primary-variant-color
         #background_fixed
             height: 100vh
-            position: relative
-            background-image: url("../img/electronic_circuit.jpg")
+            background-image: url("../img/imgbg.jpg")
+            background-attachment: fixed
+            background-position: center center
+            background-size: cover
+            background-repeat: no-repeat
+            .bw-gradient
+                width: 100%
+                height: 100vh
+                position: absolute
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+11,0+100 */
+                background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 11%, rgba(0,0,0,0) 100%)
+                background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 11%,rgba(0,0,0,0) 100%)
+                background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 11%,rgba(0,0,0,0) 100%)
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 )
         #projects_section
             height: 100vh
             position: relative
