add nav in projects section

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -203,7 +203,7 @@ $warning-light-color: #F02D3A
                         padding: 1rem
                         margin-top: 3rem
                         font-weight: 700
-                        letter-spacing: 7px
+                        letter-spacing: 5px
                         font-size: 45px
                 #about_content
                     color: white
@@ -228,6 +228,21 @@ $warning-light-color: #F02D3A
         #projects_section
             height: 100vh
             position: relative
+            background-color: $secondary-color
+            #projects_title
+                h1
+                    color: $primary-color
+                    font-family: 'Poppins', sans-serif
+                    padding: 1rem
+                    margin-top: 3rem
+                    font-weight: 700
+                    letter-spacing: 5px
+                    font-size: 45px
+            #projects_content
+                .nav
+                    background-color: $secondary-variant-color
+                    .nav-link
+                        border-radius: 0
                 
 
             
