--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,7 +271,7 @@
     padding: 1rem;
     margin-top: 3rem;
     font-weight: 700;
-    letter-spacing: 7px;
+    letter-spacing: 5px;
     font-size: 45px;
   }
   body #about_view #clippath_about #about_content {
@@ -300,6 +300,22 @@
   body #projects_section {
     height: 100vh;
     position: relative;
+    background-color: #2C302E;
+  }
+  body #projects_section #projects_title h1 {
+    color: #309d43;
+    font-family: 'Poppins', sans-serif;
+    padding: 1rem;
+    margin-top: 3rem;
+    font-weight: 700;
+    letter-spacing: 5px;
+    font-size: 45px;
+  }
+  body #projects_section #projects_content .nav {
+    background-color: #474A48;
+  }
+  body #projects_section #projects_content .nav .nav-link {
+    border-radius: 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
