--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -240,10 +240,20 @@ $warning-light-color: #F02D3A
                     font-size: 45px
             #projects_content
                 .nav
-                    background-color: $secondary-variant-color
+                    background-color: $base
                     .nav-link
+                        color: $primary-variant-color
                         border-radius: 0
-                
+                        &:hover
+                            text-decoration: none
+                            color: $primary-color
+                    .active
+                        background-color: $primary-color
+                        color: $surface-color
+                        &:hover
+                            text-decoration: none
+                            color: $surface-color
+                                  
 
             
 
