--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -27,6 +27,7 @@ $warning-light-color: #F02D3A
         padding: 0
         margin: 0
         overflow-x: hidden
+        position: relative
         #home_view
             height: 100vh
             width: 100%
@@ -253,6 +254,14 @@ $warning-light-color: #F02D3A
                         &:hover
                             text-decoration: none
                             color: $surface-color
+                .tab-content
+                    background-color: $secondary-variant-color
+                    #list-example
+                        height: 40vh
+        #contact_section
+            height: 100vh
+            background-color: $secondary-variant-color
+            
                                   
 
             
