added scss styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>Homepage portfolio</h1>
+<!-- <router-oulet></router-oulet> -->
+
+<app-principal></app-principal>  
+<button class="btn btn-danger"> Salir</button>
