added myProjects component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <router-oulet></router-oulet> -->
 
-<app-principal></app-principal>  
-<button class="btn btn-danger"> Salir</button>
+<app-principal></app-principal>
+<app-projects></app-projects>  
