--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -15,7 +15,7 @@
   <div class="container-fluid h-100">
     <div id="home_button" class="row w-100 align-items-center">
       <div class="col text-center">
-        <a href="#about_view" class="btn btn-success regular-button">
+        <a class="btn btn-success regular-button">
           Know more
         </a>
       </div>
