--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -94,7 +94,7 @@
             position: absolute;
             z-index: 3;
             padding: 25px;
-            margin-top: 35px;
+            margin-top: 20%;
             width: 50%;
             text-align: center;
             #epigraph {
