added section myProjects with height

--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -94,7 +94,7 @@
             position: absolute;
             z-index: 3;
             padding: 25px;
-            margin-top: 20%;
+            margin-top: 10%;
             width: 50%;
             text-align: center;
             #epigraph {
@@ -171,6 +171,7 @@
             margin-left: 0;
             margin-right: 0;
             width: 50%;
+            padding: 35px;
             .w-100 {
                 width: 50% !important;           
                 #home_button {
@@ -183,7 +184,13 @@
         #home_button {
             position: absolute;
             z-index: 4;
-            margin-top: 70vh; 
+            margin-top: 15%;
+            padding: 70px;
+            a {
+                border-radius: 0;
+                padding: 17px;
+                font-size: 20px;
+            } 
         }                     
     }
     #about_view {
