visualization of the cards of the project section with scroll

--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -94,7 +94,7 @@
             position: absolute;
             z-index: 3;
             padding: 25px;
-            margin-top: 10%;
+            margin-top: 15%;
             width: 50%;
             text-align: center;
             #epigraph {
@@ -177,14 +177,14 @@
                 #home_button {
                     position: absolute;
                     z-index: 4;
-                    margin-top: 65vh;
+                    //margin-top: 65vh;
                 }
             }
         }
         #home_button {
             position: absolute;
             z-index: 4;
-            margin-top: 15%;
+            margin-top: 20%;
             padding: 70px;
             a {
                 border-radius: 0;
