added about and contact section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <router-oulet></router-oulet> -->
 
 <app-principal></app-principal>
-<app-projects></app-projects>  
+<app-about></app-about>
+<app-projects></app-projects>
+<app-contact></app-contact>  
