--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -10,10 +10,9 @@
         color: $primary-color;
         font-family: "Poppins", sans-serif;
         padding: 1rem;
-        margin-top: 2rem;
         font-weight: 700;
         letter-spacing: 5px;
-        font-size: 45px;
+        font-size: 6vh;
       }
     }
     #projects_content {
