added particles effects type snow fall

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -50,5 +50,7 @@
 </div>
 
 <div id="background_fixed">
+    <particles  id="particles"  [params]="myParams" [width]="width" [height]="height"></particles>
+
     <div class="bw-gradient"></div>
 </div>
