--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -40,6 +40,15 @@
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
+        #particles {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
         .bw-gradient {
             width: 100%;
             height: 100vh;
