added button and new green particles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -51,6 +51,7 @@
 
 <div id="background_fixed">
     <particles  id="particles"  [params]="myParams" [width]="width" [height]="height"></particles>
+    <particles  id="particles"  [params]="myParams2" [width]="width" [height]="height"></particles>
 
     <div class="bw-gradient"></div>
 </div>
