--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -171,7 +171,7 @@
             margin-left: 0;
             margin-right: 0;
             width: 50%;
-            padding: 35px;
+            padding-top: 45px;
             .w-100 {
                 width: 50% !important;           
                 #home_button {
@@ -190,7 +190,65 @@
                 border-radius: 0;
                 padding: 17px;
                 font-size: 20px;
+            }
+            button {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: none;
+                color: $surface-color;
+                width: 240px;
+                height: 80px;
+                border: 1px solid $primary-color;
+                font-size: 19px;
+                border-radius: 4px;
+                transition: .6s;
+                overflow: hidden;
+            }
+            button:focus {
+                outline: none;
             } 
+            button:before {
+                content: '';
+                display: block;
+                position: absolute;
+                background: rgba(255,255,255,.5);
+                width: 60px;
+                height: 100%;
+                left: 0;
+                top: 0;
+                opacity: .5;
+                filter: blur(30px);
+                transform: translateX(-130px) skewX(-15deg);
+            }
+            button:after {
+                content: '';
+                display: block;
+                position: absolute;
+                background: rgba(255,255,255,.2);
+                width: 30px;
+                height: 100%;
+                left: 30px;
+                top: 0;
+                opacity: 0;
+                filter: blur(30px);
+                transform: translate(-100px) scaleX(-15deg);
+            }
+            button:hover {
+                background: $primary-color;
+                cursor: pointer;
+            }
+            button:hover:before {
+                transform: translateX(300px) skewX(-15deg);
+                opacity: .6;
+                transition: .7s;
+            }
+            button:hover:after {
+                transform: translateX(300px) skewX(-15deg);
+                opacity: .6;
+                transition: .7s;
+            }
         }                     
     }
     #about_view {
