--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -12,12 +12,17 @@
 
   <div id="clippath_triangle"></div>
 
-  <div class="container-fluid h-100">
+  <div id="container_home_button" class="container-fluid h-100">
     <div id="home_button" class="row w-100 align-items-center">
-      <div id="container_button" class="col text-center">
+      <!-- <div id="container_button" class="col text-center">
         <a class="btn btn-success regular-button">
           Know more
         </a>
+      </div> -->
+      <div class="wrapper">
+        <div class="btn">
+          <button type="button">Know More</button>
+        </div>
       </div>
     </div>
   </div>
