--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -13,7 +13,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            z-index: 1;
+            z-index: 3;
             #about_title {
                 h1 {
                     color: $primary-color;
@@ -29,6 +29,10 @@
                 color: white;
                 h2 {
                     color: $primary-variant-color;
+                    font-family: 'Raleway', sans-serif;
+                }
+                p {
+                    font-family: 'Raleway', sans-serif;
                 }
             }
         }
@@ -41,6 +45,7 @@
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
+        border-bottom: 40px solid rgba(0, 0, 0, 0.5); 
         #particles {
             position: fixed;
             width: 100%;
