--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -6,11 +6,11 @@
     </div>
   </div>
 
-  <div id="clippath_polygon"></div>
+  <div data-aos="fade-up" data-aos-duration="1000" id="clippath_polygon"></div>
 
   <div id="clippath_circle"></div>
 
-  <div id="clippath_triangle"></div>
+  <div data-aos="fade-up" data-aos-duration="3000" id="clippath_triangle"></div>
 
   <div id="container_home_button" class="container-fluid h-100">
     <div id="home_button" class="row w-100 align-items-center">
