--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -142,7 +142,7 @@
             clip-path: polygon(0 89%, 100% 95%, 100% 100%, 0% 100%);
             background-color: $primary-variant-color;
             position: absolute;
-            z-index: 2;
+            z-index: 1;
             width: 100%;
             height: 100%;
         }
@@ -205,6 +205,7 @@
                 border-radius: 4px;
                 transition: .6s;
                 overflow: hidden;
+                font-family: 'Montserrat', sans-serif;
             }
             button:focus {
                 outline: none;
