changued the font

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div id="about_view">
 
     <div id="clippath_about">
-        <div id="about_title" class="container" data-aos="flip-right" data-aos-duration="1000">
+        <div id="about_title" class="container" data-aos="flip-right" data-aos-duration="2000">
             <div class="row justify-content-md-center">
                 <h1>ABOUT ME</h1>
             </div>
@@ -9,7 +9,7 @@
 
         <div id="about_content" class="container">
             <div class="row">
-                <div data-aos="fade-right" class="col">
+                <div data-aos="fade-right" data-aos-duration="2000" class="col">
                     <div class="justify-content-md-center">
                         <h2>Who am I?</h2>
                     </div>
@@ -21,7 +21,7 @@
                         in High Performance Computing (HPC) for applications of social interest".</p>
                     <p>I'm interested in design, programming, and cloud technologies.</p>
                 </div>
-                <div data-aos="fade-up" class="col">
+                <div data-aos="fade-up" data-aos-duration="2000" class="col">
                     <div class="justify-content-md-center">
                         <h2>What is this website?</h2>
                     </div>
@@ -30,7 +30,7 @@
                          that I use or that interest me. I hope in the future to expand this site by 
                          adding a section where I can comment on my experience with the tools I use.</p>
                 </div>
-                <div data-aos="fade-left" class="col">
+                <div data-aos="fade-left" data-aos-duration="2000" class="col">
                     <div class="justify-content-md-center">
                         <h2>Random facts</h2>
                     </div>
