--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,4 +1,5 @@
 <div id="home_view">
+  <particles  id="particles"  [params]="myParams" [width]="width" [height]="height"></particles>
   <div id="presentation_title">
     <div id="epigraph">
       <h1>MauroGmz</h1>
