--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -7,7 +7,7 @@
     <div id="projects_content" class="container-fluid">
         <div class="row" style="height: 85vh;" data-aos="zoom-out-up"
         data-aos-duration="1000">
-            <div class="col-3" style="height: 85vh;">
+            <div id="left_column" class="col-3" style="height: 85vh;">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="height: 95%;">
                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
                         aria-controls="v-pills-home" aria-selected="true">Faculty of Engineering</a>
