--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -32,7 +32,7 @@
                     font-family: 'Raleway', sans-serif;
                 }
                 p {
-                    font-family: 'Raleway', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                 }
             }
         }
@@ -49,7 +49,7 @@
         #particles {
             position: fixed;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             top: 0;
             left: 0;
             right: 0;
