--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -90,6 +90,17 @@
         width: 100%;
         position: relative;
         background-color: $secondary-color;
+        z-index: 1;
+        #particles {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+        }
         #presentation_title {
             position: absolute;
             z-index: 3;
@@ -122,11 +133,13 @@
                     line-height: 1em;
                     font-size: 65px;
                     margin-bottom: 25px;
+                    z-index: 3;
                 }
                 h3 {
                     font-family: 'Poppins', sans-serif;
                     font-weight: 200;
-                    font-size: 18px; 
+                    font-size: 18px;
+                    z-index: 3; 
                 } 
             }
         }
